--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,4 +41,4 @@ stages:
     steps:
     - task: CmdLine@2
       inputs:
-        script: 'docker run -it --rm -d -p 80:80 --name web $(repository):$(tag)'
+        script: 'docker stop web && docker run -it --rm -d -p 80:80 --name web $(repository):$(tag)'
