--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
@@ -79,7 +80,7 @@
     ]
   },
   "devDependencies": {
-    "husky": "^4.2.3",
+    "husky": "^4.3.8",
     "source-map-explorer": "^2.5.2"
   }
 }
