--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,7 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
 
 trigger:
 - develop
@@ -12,19 +13,20 @@ variables:
   buildId: '$(Build.BuildId)'
   tag: 'dev'
   repository: 'vsite-web-fe'
+  container: 'web_fe'
+
+pool: Default
 
 stages:
 - stage: Build
   displayName: Build image
   jobs:
   - job: Build
-    displayName: Build
-    pool: Default
+    displayName: Build image
     steps:
     - task: CmdLine@2
       inputs:
-        script: 'whoami && echo Write your commands here.'
-        
+        script: 'pwd && ls -a'
     - task: Docker@2
       displayName: Build an image
       inputs:
@@ -32,13 +34,12 @@ stages:
         command: 'build'
         Dockerfile: '**/Dockerfile'
         tags: '$(tag)'
-- stage: Run
-  displayName: Run image
+- stage: Deploy
+  displayName: Deploy to nginx
   jobs:
-  - job: Run
-    displayName: Run
-    pool: Default
+  - job: Deploy
+    displayName: Deploy
     steps:
     - task: CmdLine@2
       inputs:
-        script: 'docker stop web && docker run -it --rm -d -p 80:80 --name web $(repository):$(tag)'
+        script: 'cd /home/ubuntu/deployments/ && docker-compose up -d --no-recreate $(container)'
