--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "lint-staged": "^10.5.4",
+    "lodash": "^4.17.21",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
